--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,11 +9,12 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="{{ url_for('index') }}">Home</a></li>
+            <li><a href="{{ url_for('about') }}">About</a></li>
+            <li><a href="{{ url_for('contact') }}">Contact</a></li>
         </ul>
     </nav>
     
-    <h1>About Page</h1>
+    <h1>Home Page</h1>
 </body>
 </html>
