--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" type="text/css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/clean-blog.min.css') }}" type="text/css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css" />
 </head>
 
 <body>
@@ -56,6 +57,8 @@
 
     <!-- Main Content -->
     <div class="container">
+        <h2>{{ page_title }}</h2>
+        
         
         {% block content %}
         {% endblock %}
