--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,6 +2,8 @@
 {% block content %}
 
 <div class="row">
+    
+    
     <div class="col-lg-8 col-md-10 mx-auto">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -12,6 +14,8 @@
         </ul>
         {% endif %}
         {% endwith %}
+        
+        <h2>{{ page_title }}</h2>
         
         <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
 
